update printer and support pg 17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(HOME_ENV $ENV{HOME}/.bashrc)
 
 MESSAGE(STATUS "install printer to postgres path: ${PostgreSQL_BIN_DIR}")
 install(FILES ${PTINTER} DESTINATION ${PostgreSQL_BIN_DIR})
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/printer DESTINATION ${PostgreSQL_BIN_DIR})
 
 MESSAGE(STATUS "append debugger init file to: ${GDBINIT}")
 file(APPEND ${GDBINIT} "add-auto-load-safe-path ${PostgreSQL_BIN_DIR}\n")
